--- a/backend/frontend/templates/frontend/index.html
+++ b/backend/frontend/templates/frontend/index.html
@@ -5,6 +5,8 @@
     <title>Product List</title>
 </head>
 <body>
+    <a href="signup.html">Signup</a>
+
     <div id="product-list">
         <!-- Product list will be displayed here -->
     </div>
